--- a/public/conta.html
+++ b/public/conta.html
@@ -125,5 +125,7 @@
     </main>
 
     <script src="./scripts/editar.js" defer></script>
+    <script src="./scripts/auth.js"></script>
   </body>
 </html>
+
