--- a/public/conta.html
+++ b/public/conta.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Editar Perfil – Seu Projeto</title>
+    <title>Editar Perfil</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&display=swap"
       rel="stylesheet"
@@ -128,4 +128,5 @@
     <script src="./scripts/auth.js"></script>
   </body>
 </html>
+
 
