--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Login – Seu Projeto</title>
+    <title>Login</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&display=swap"
       rel="stylesheet"
@@ -73,3 +73,4 @@
     <script src="./scripts/login.js" defer></script>
   </body>
 </html>
+
